--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,54 +8,50 @@ on:
 
 jobs:
   config:
-
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 2
       matrix:
         python-version: [3.10]
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: configurando venv e  instalando dependências
-      run: |
-        python -m venv venv
-        source .venv/bin/activate
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: realizando migracao
-      run: |
-        source .venv/bin/activate
-        python manage.py migrate
-    - name: coletando arquivos estaticos
-      run: |
-        source .venv/bin/activate
-        python manage.py collectstatic
-    - name : subindo o servidor
-      run: |
-        source .venv/bin/activate
-        python manage.py runserver &
-        sleep 5
-
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+          
+      - name: Configurando venv e instalando dependências
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          
+      - name: Realizando migração
+        run: |
+          source venv/bin/activate
+          python manage.py migrate
+          
+      - name: Coletando arquivos estáticos
+        run: |
+          source venv/bin/activate
+          python manage.py collectstatic --noinput
+          
+      - name: Subindo o servidor
+        run: |
+          source venv/bin/activate
+          python manage.py runserver &
+          sleep 5
 
   tests:
-    
-      runs-on: ubuntu-latest
-      needs: config
-      steps:
-      - name: testando a config e resposta
+    runs-on: ubuntu-latest
+    needs: config
+    steps:
+      - name: Testando a configuração e resposta
         run: |
-          source .venv/bin/activate
+          source venv/bin/activate
           python manage.py test
-          curl -I http://127.0.0.1:8000/  || exit 1
+          curl -I http://127.0.0.1:8000/ || exit 1
+          
       - name: Kill server
         run: |
           kill $(lsof -t -i:8000)
-     
-
-      
