--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -42,12 +42,9 @@ jobs:
           python manage.py runserver &
           sleep 5
 
-  tests:
-    runs-on: ubuntu-latest
-    needs: config
-    steps:
       - name: Testando a configuração e resposta
         run: |
+          source venv/bin/activate
           python manage.py test
           curl -I http://127.0.0.1:8000/ || exit 1
           
